# ical-manager

./: .dockerenv  .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  TODO.md  expanded.rs  shell.nix
.github/workflows/: publish.yaml
assets/css/: main.css  primitive.css
assets/js/: main.js
docs/: gcal-request.txt
migrations/: 20230827144029_feed.sql  20230827144029_feed.up.sql  20230914172730_sample_data.down.sql  20230914172730_sample_data.up.sql  20230917191413_fetch_cache.down.sql  20230917191413_fetch_cache.up.sql  20230917204801_http_ttl.up.sql  20230917215633_cache_triggers.down.sql  20230917215633_cache_triggers.up.sql  20230917233905_users.down.sql  20230917233905_users.up.sql  20230917235901_sample_user.down.sql  20230917235901_sample_user.up.sql  20230918232659_secrets.down.sql  20230918232659_secrets.up.sql
src/: logic.rs  main.rs  strum_util.rs
src/data/: cache.rs  feed.rs  filters.rs  mod.rs  secrets.rs  source.rs  ttl.rs  url_source.rs  user.rs
src/data/source/: ttl.rs
src/logic/: fetch.rs  filters.rs  mod.rs  ssrf_guard.rs
src/presentation/: cookies.rs  error.rs  form.rs  fragments.rs  htmx.rs  icon.rs  layout.rs  mod.rs  pages.rs
src/presentation/auth/: extract.rs  logic.rs  mod.rs  pages.rs
