[package]
name = "ical-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
axum = { version = "0.6.20", features = ["macros"] }
axum_typed_multipart = "0.9.0"
bytes = "1.5.0"
chrono = "0.4.26"
cookie = { version = "0.17.0", features = ["key-expansion"] }
dotenvy = "0.15.7"
env_logger = "0.10.0"
http = "0.2.9"
humantime = "2.1.0"
icondata = { version = "0.0.7", features = ["LuCopy", "LuEdit", "LuRefreshCw", "LuTrash", "LuPlus"] }
itertools = "0.11.0"
log = "0.4.20"
maud = { version = "0.25.0", features = ["axum"] }
openidconnect = "3.3.1"
reqwest = { version = "0.11.20", features = ["rustls-tls"], default-features = false }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
serde_urlencoded = "0.7.1"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite", "macros", "chrono"] }
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.14"
tower-cookies = { version = "0.9.0", features = ["signed"] }
tower-http = { version = "0.4.3", features = ["fs"] }
unwrap-infallible = "0.1.5"
uuid = { version = "1.4.1", features = ["v4"] }
